--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 bcrypt==4.2.1
+beautifulsoup4==4.12.3
 blinker==1.9.0
 cffi==1.17.1
 click==8.1.7
@@ -15,6 +16,9 @@ MarkupSafe==3.0.2
 packaging==24.2
 pycparser==2.22
 PyMySQL==1.1.1
+python-slugify==8.0.4
+soupsieve==2.6
 SQLAlchemy==2.0.36
+text-unidecode==1.3
 typing_extensions==4.12.2
 Werkzeug==3.1.3
